# a2kit

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
completions/: README.md  _a2kit  _a2kit.ps1  a2kit.bash  a2kit.elv  a2kit.fish
src/: cli.rs  disk525.rs  disk_base.rs  img_do.rs  img_po.rs  img_woz1.rs  img_woz2.rs  lib.rs  main.rs  walker.rs  woz.rs
src/applesoft/: minifier.rs  minify_guards.rs  minify_test.rs  mod.rs  tokenize_test.rs  tokenizer.rs
src/bios/: as.rs  blocks.rs  bpb.rs  dpb.rs  fat.rs  mod.rs  skew.rs
src/bios/blocks/: apple.rs  cpm.rs  fat.rs
src/commands/: completions.rs  ezcopy.rs  get.rs  get_img.rs  langx.rs  mkdsk.rs  mod.rs  modify.rs  put.rs  put_img.rs  stat.rs
src/dos33/: boot.rs  mod.rs  types.rs
src/fs/: fimg.rs  mod.rs  recs.rs
src/fs/cpm/: directory.rs  display.rs  mod.rs  pack.rs  types.rs
src/fs/dos33/: boot.rs  directory.rs  mod.rs  types.rs
src/fs/dos3x/: boot.rs  directory.rs  mod.rs  pack.rs  types.rs
src/fs/fat/: directory.rs  display.rs  mod.rs  pack.rs  types.rs
src/fs/fimg/: as.rs
src/img/: disk35.rs  disk525.rs  dot2mg.rs  dsk_d13.rs  dsk_do.rs  dsk_img.rs  dsk_po.rs  imd.rs  meta.rs  mod.rs  names.rs  nib.rs  td0.rs  tracks.rs  woz.rs  woz1.rs  woz2.rs
src/integer/: mod.rs  token_maps.rs  tokenizer.rs
src/lang/: disk_server.rs  linenum.rs  mod.rs  server.rs
src/merlin/: mod.rs  tokenizer.rs
src/prodos/: directory.rs  disk525.rs  mod.rs  types.rs
tests/: cli_test.rs  cli_test_cp.rs  cli_test_fimg.rs  cli_test_meta.rs  cli_test_mkdsk.rs  cpm-ren-del.dsk  cpm-smallfiles.dsk  cpm-timestamps.dsk  cpm_test.rs  disk_metrics_test.rs  dos32-bigfiles.woz  dos32-ren-del.woz  dos32-smallfiles.woz  dos32_test.rs  dos33-bigfiles.do  dos33-bigfiles.woz  dos33-ren-del.do  dos33-smallfiles.do  dos33-smallfiles.dsk  dos33_test.rs  makebig.bas  msdos-ren-del.imd  msdos-ren-del.img  msdos_test.rs  pascal-blank.do  pascal-smallfiles.do  pascal_test.rs  prodos-bigfiles.dsk  prodos-bigfiles.woz  prodos-blank.po  prodos-fill-dirs.dsk  prodos-mkdir.dsk  prodos-ren-del.dsk  prodos-smallfiles.do  prodos-smallfiles.po  prodos_test.rs  ren-del.bas  smallfiles.do  special_test.rs  test.as  (+3 more)
tests/applesoft/: test-collisions.abas  test-data.abas  test-functions.abas  test-lines.abas  test-ranges.abas  test-unassigned.abas  test-undeclared.abas  test.chain1.abas  test.chain2.abas  test.chain3.abas
tests/disk_builders/: README.md  build_big.bas  build_dirs.bas  build_ren_del.bas  build_small.bas  cpm_builder.sub  disk_builder.abas  disk_builder.ibas  msdos_builder.bas  msdos_builder.bat
tests/fimg/: test-as-create.as
tests/integerbasic/: test-collisions.ibas  test-functions.ibas  test-lines.ibas  test-ranges.ibas  test-unassigned.ibas  test-undeclared.ibas  test.chain1.ibas  test.chain2.ibas
tests/merlin/: test-65816-disabled.S  test-65c02-disabled.S  test-decs-fwd-var.S  test-decs-redefined.S  test-decs-un-glob.S  test-decs-un-loc.S  test-dos32-code.S  test-ent-equates.S  test-ext-equates.S  test-fmt-comments.S  test-fmt-straight.S  test-fmt-strings.S  test-ill-fwd.S  test-loc-macro.S  test-loc-noscope.S  test-loc-psops.S  test-mac-args.S  test-mac-context.S  test-mac-forward.S  test-mac-nested.S  test-mac-psops.S  test-mac-recursive-refs.S  test-mac-termination.S  test-mac-undefined.S  test-mac-vars.S  test-matches-instruction.S
tests/special/: README.md  edit-ultima.py  nibswap.ps1  ultima4.fmt.json  ultima5.fmt.json  wolfenstein.fmt.json
(+121 files in other folders)
