build = "build.rs"

[package]
name = "a2kit"
version = "2.6.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "Apple II disk image and language utility"
keywords = ["retro","disk","apple","cpm","dos"]
repository = "https://github.com/dfgordon/a2kit"
homepage = "https://github.com/dfgordon/a2kit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
clap = {version="4.4.4",features=["cargo"]}
clap_complete = "4.4.4"

[dependencies]
log = "0.4.17"
bit-vec = "0.6.3"
env_logger = "0.9.1"
hex = "0.4.3"
tree-sitter = "0.20.8"
tree-sitter-applesoft = "3.1.1"
tree-sitter-integerbasic = "1.0.3"
tree-sitter-merlin6502 = "2.0.0"
clap = {version="4.4.4",features=["cargo"]}
tempfile = "3.6.0"
json = "0.12"
chrono = "0.4.20"
regex = "1.5"
predicates = "2.1.0"
assert_cmd = "2.0.2"
thiserror = "1.0.30"
atty = "0.2"
colored = "2"
num-traits = "0.2.14"
num-derive = "0.3.3"
a2kit_macro = "0.1.0"
a2kit_macro_derive = "0.1.0"
retrocompressor = "0.1.1"