[package]
name = "a2kit"
version = "3.2.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "Retro disk image and language utility"
keywords = ["retro","disk","apple","cpm","dos"]
repository = "https://github.com/dfgordon/a2kit"
homepage = "https://github.com/dfgordon/a2kit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
clap = {version="4.5.2",features=["cargo"]}
clap_complete = "4.5.2"
regex = "1.10"

[dependencies]
log = "0.4.17"
glob = "0.3.1"
globset = "0.4.14"
bit-vec = "0.6.3"
env_logger = "0.11.3"
hex = "0.4.3"
a2-memory-map = "1.0.4"
tree-sitter = "0.22.4"
tree-sitter-applesoft = "4.0.0"
tree-sitter-integerbasic = "2.0.0"
tree-sitter-merlin6502 = "3.0.0"
lsp-types = "0.95.0"
lsp-server = "0.7.6"
clap = {version="4.5.4",features=["cargo"]}
tempfile = "3.6.0"
json = "0.12"
serde = "1.0.116"
serde_json = "1.0.116"
chrono = "0.4.35"
regex = "1.10"
predicates = "2.1.0"
assert_cmd = "2.0.2"
thiserror = "1.0.30"
atty = "0.2"
colored = "2"
num-traits = "0.2.14"
num-derive = "0.3.3"
a2kit_macro = "1.0.0"
a2kit_macro_derive = "1.0.0"
retrocompressor = "1.0.0"
binrw="0.14.0"