[package]
name = "a2kit"
version = "4.0.0-rc"
edition = "2024"
readme = "README.md"
license = "MIT"
description = "Retro disk image and language utility"
keywords = ["retro","disk","apple","cpm","dos"]
repository = "https://github.com/dfgordon/a2kit"
homepage = "https://github.com/dfgordon/a2kit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
glob = "0.3.1"
globset = "0.4.14"
bit-vec = "0.8.0"
env_logger = "0.11.3"
hex = "0.4.3"
a2-memory-map = "1.0.4"
tree-sitter = "0.25.8"
tree-sitter-applesoft = "5.0.0"
tree-sitter-integerbasic = "3.0.0"
tree-sitter-merlin6502 = "4.0.0"
lsp-types = "0.97.0"
fluent-uri = "0.3.2"
url = "2.5.4"
lsp-server = "0.7.6"
clap = {version="4.5.4",features=["cargo"]}
clap_complete = "4.5.4"
json = "0.12"
serde = "1.0.116"
serde_json = "1.0.116"
math-parse = "1.0.2"
chrono = "0.4.35"
regex = "1.10"
thiserror = "2.0.12"
atty = "0.2"
colored = "3.0.0"
num-traits = "0.2.14"
num-derive = "0.4"
a2kit_macro = "1.0.0"
a2kit_macro_derive = "1.0.0"
retrocompressor = "1.0.0"
binrw="0.15.0"

[dev-dependencies]
tempfile = "3.6.0"
predicates = "3.1.3"
assert_cmd = "2.0.2"
